Update caso de uso3.html

--- a/proyecto poo/caso de uso3.html
+++ b/proyecto poo/caso de uso3.html
@@ -1,4 +1,4 @@
-**3 Comprovacion de Certificados 
+**3 Comprobacion de Certificados 
 - la empresa Aprendamos deve verificar si cada estudiante inscrito en los diferentes 
 cursos cumple con los requizitos para obtener la certificacion .
 para obtener el certificado debe cumplir con siertos requisitos como:
